# sensors-connectivity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  fetchNixpkgs.nix  flash_firmware.py  package.xml  pyproject.toml  release.nix  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml  test.yml
boards/: README.md  generate_secrets.py
boards/arduino/SDS011/: SDS011.ino
boards/esp/: README.md
boards/esp/ESP8266_LoRa_Receiver/: ESP8266_LoRa_Receiver.ino
boards/esp/ESP8266_LoRa_Sender/: ESP8266_LoRa_Sender.ino
boards/esp/ESP_PING/: flash_firmware.py
boards/esp/ESP_TCP/: ESP_TCP.ino  flash_firmware.py  platformio.ini
boards/esp/SDS011/: SDS011.ino
boards/esp/mobile_gps/: config.yaml  flash_firmware.py  platformio.ini
boards/esp/mobile_gps/include/: README.md
boards/esp/mobile_gps/src/: mobile_gps.ino
boards/esp/ping/: config.yaml  flash_firmware.py  platformio.ini
boards/esp/ping/src/: ping.ino
boards/esp/sds011/: config.yaml  platformio.ini
boards/esp/sds011/src/: main.cpp
boards/esp/tcp/: config.yaml  flash_firmware.py  platformio.ini
boards/esp/tcp/include/: README.md
boards/esp/tcp/src/: tcp.ino
config/: default.json  default.yaml
connectivity/: constants.py  main.py
connectivity/config/: README.md  __init__.py  default.json  logging.py  logging_template.py
connectivity/src/drivers/: __init__.py  ping.py  sds011.py
connectivity/src/feeders/: __init__.py  datalog_feeder.py  frontier_datalog.py  ifeeder.py  luftdaten_feeder.py  robonomics_feeder.py
connectivity/src/feeders/pinning_services/: __init__.py  pinning_manager.py
connectivity/src/feeders/pinning_services/gateways/: __init__.py  crust.py  local.py  pinata.py  pinning_gateway.py  temporal.py
connectivity/src/sensors/: __init__.py  base.py  environmental_box.py  lora_sensors.py  mobile_lab.py  sds011.py  sensor_sds011.py  sensor_template.py  sensors_fabric.py  trackagro_sensor.py
connectivity/src/sensors/sensors_types/: __init__.py  altruist.py  base.py  environmental_box.py  lora_sensors.py  mobile_lab.py  sensor_sds011.py  trackagro_sensor.py
connectivity/src/stations/: __init__.py  comstation.py  httpstation.py  istation.py  lorastation.py  mqttstation.py  trackargostation.py
connectivity/utils/: __init__.py  database.py  datalog_db.py  datalog_payload.py  flash_firmware.py  format_robonomics_feeder_msg.py  generate_pubkey.py  generate_secrets.py  get_mac.py  ipfs_db.py  py_generate_secrets.py  sign_data.py  virtual-sensor.py
docs/: sensors_keys_sheme.md  technical_readme.md
launch/: agent.launch
robonomics/: model.txt  robonomics-bin.nix
scripts/: worker_node
src/drivers/: payload.proto  payload_pb2.py  ping.py  sds011.py
src/feeders/: __init__.py  datalog_feeder.py  frontier_datalog.py  ifeeder.py  luftdaten_feeder.py  robonomics_feeder.py
src/sds011/: __init__.py  datalog_feeder.py  luftdaten_feeder.py  robonomics_feeder.py  sds011.py  station.py
src/stations/: __init__.py  bme280.py  comstation.py  httpstation.py  istation.py  mqttstation.py  tcpstation.py  trackargostation.py
tests/: altruist_test.py  auto_test.py  data.json  environmental_box_test.py  gps_sensor_test.py  lora_sensor_test.py  many_environmental_boxes.py  mobile_lab_test.py
utils/: database.py  flash_firmware.py  generate_secrets.py  py_generate_secrets.py  virtual-sensor.py
